--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
 <body>
     <div role="main container" class="container-fluid bg-light">
         <div class="row">
-            <div class="col-md-6 text-center ">
+            <div class="col-md-12 text-center bg-info">
+                <img src="./assets/Images/Afro Flower Logos_Black Font Personal Logo.png" class="img-fluid" alt="Afro Flower Logo">
                 <h1>Hello World!</h1>
             </div>
-            <div class="col-md-6 text-center bg-info">
+        </div>
+        <div class="row">
+            <div class="col-md-12 text-center bg-info my-5 p-2">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit perferendis ipsa voluptatum assumenda optio a veritatis quam ullam, libero tempora autem pariatur quasi provident adipisci natus consequuntur distinctio quisquam modi!</p>
             </div>
-        </div>
+        </div>  
     </div>
     
     <!-- Footer -->
