--- a/index.html
+++ b/index.html
@@ -10,58 +10,13 @@
     <title>Anneliese Palmer | Web Developer</title>
 </head>
 <body>
-    <div role="main container" class="container-fluid bg-light">
+    <div role="main container" class="container-fluid">
         <div class="row">
-            <div class="col-md-12 text-center bg-info">
-                <img src="./assets/Images/Afro Flower Logos_Black Font Personal Logo.png" class="img-fluid" alt="Afro Flower Logo">
-                <h1>Hello World!</h1>
+            <div class="col-md-12">
+                <img src="./assets/Images/Mock Code Website_Final Design - Transparent.png" class="img-fluid" alt="Afro Flower Logo">
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-12 text-center bg-info my-5 p-2">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit perferendis ipsa voluptatum assumenda optio a veritatis quam ullam, libero tempora autem pariatur quasi provident adipisci natus consequuntur distinctio quisquam modi!</p>
-            </div>
-        </div>  
     </div>
-    
-    <!-- Footer -->
-    <footer class="page-footer font-small pt-4">
-
-    <!-- Footer Text -->
-    <div class="container-fluid text-center text-md-left">
-  
-      <!-- Grid row -->
-      <div class="row">
-  
-        <!-- <hr class="clearfix w-100 d-md-none pb-3"> -->
-  
-        <!-- Grid column -->
-        <div class="col-md-12 mb-md-0 mb-3 text-center">
-  
-          <!-- Content -->
-          <h5 class="text-uppercase font-weight-bold">Footer text 2</h5>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio deserunt fuga perferendis modi earum
-            commodi aperiam temporibus quod nulla nesciunt aliquid debitis ullam omnis quos ipsam, aspernatur id
-            excepturi hic.</p>
-  
-        </div>
-        <!-- Grid column -->
-  
-      </div>
-      <!-- Grid row -->
-  
-    </div>
-
-    <!-- Footer Text -->
-  
-    <!-- Copyright -->
-    <div class="footer-copyright text-center py-3 bg-warning">© 2020 Copyright:
-      <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
-    </div>
-    <!-- Copyright -->
-  
-    </footer>
-    <!-- Footer -->
 
     <!-- Bootstrap Specfic jQuery and Popper.js -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
