--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
                 <img src="./assets/Images/Mock Code Website_Final Design - Transparent.png" class="img-fluid" alt="Afro Flower Logo">
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-12 text-center p-3">
+                <h3>Find me on GitHub or my other social media sites below to contact me.</h3>
+            </div>
+        </div>
     </div>
 
     <!-- Bootstrap Specfic jQuery and Popper.js -->
