--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/style.css">
+    <!-- Add font awesome icon library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
     <title>Anneliese Palmer | Web Developer</title>
 </head>
@@ -18,7 +21,12 @@
         </div>
         <div class="row">
             <div class="col-md-12 text-center p-3">
-                <h3>Find me on GitHub or my other social media sites below to contact me.</h3>
+                <!-- <h3>Find me on GitHub or my other social media sites below to contact me.</h3> -->
+                <button class="btn"><i class="fa fa-github-alt" style="font-size:48px;color:white"></i></button>
+                <button class="btn"><i class="fa fa-instagram" style="font-size:48px;color:white"></i></button>	
+                <button class="btn"><i class="fa fa-linkedin-square" style="font-size:48px;color:white"></i></button>
+                <button class="btn"><i class="fa fa-phone" style="font-size:48px;color:white"></i></button>	
+                <a href="http://https://github.com/AfroFlower"></a>
             </div>
         </div>
     </div>
