added initial links

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/style.css">
     <!-- Add font awesome icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <!-- <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"> -->
 
     <title>Anneliese Palmer | Web Developer</title>
 </head>
@@ -21,12 +21,10 @@
         </div>
         <div class="row">
             <div class="col-md-12 text-center p-3">
-                <!-- <h3>Find me on GitHub or my other social media sites below to contact me.</h3> -->
-                <button class="btn"><i class="fa fa-github-alt" style="font-size:48px;color:white"></i></button>
-                <button class="btn"><i class="fa fa-instagram" style="font-size:48px;color:white"></i></button>	
-                <button class="btn"><i class="fa fa-linkedin-square" style="font-size:48px;color:white"></i></button>
-                <button class="btn"><i class="fa fa-phone" style="font-size:48px;color:white"></i></button>	
-                <a href="http://https://github.com/AfroFlower"></a>
+                <button onclick="window.location.href = 'https://github.com/AfroFlower';" class="btn"><i class="fa fa-github-alt" style="font-size:48px;color:white"></i></button>
+                <!-- <button onclick="window.location.href = 'https://instagram.com/afroflowerr/';" class="btn"><i class="fa fa-instagram" style="font-size:48px;color:white"></i></button>	 -->
+                <button onclick="window.location.href = 'https://linkedin.com/in/anneliesepalmer/';" class="btn"><i class="fa fa-linkedin-square" style="font-size:48px;color:white"></i></button>
+                <!-- <button class="btn"><i class="fa fa-phone" style="font-size:48px;color:white"></i></button>	 -->
             </div>
         </div>
     </div>
