--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"> -->
 
     <title>Anneliese Palmer | Web Developer</title>
+
 </head>
 <body>
     <div role="main container" class="container-fluid">
@@ -21,15 +22,15 @@
         </div>
         <div class="row">
             <div class="col-md-12 text-center p-3">
-                <button onclick="window.location.href = 'https://github.com/AfroFlower';" class="btn"><i class="fa fa-github-alt" style="font-size:48px;color:white"></i></button>
+                <button onclick="window.location.href = 'https://github.com/AfroFlower';" class="btn"><i class="fa fa-github-alt"></i> GitHub</button>
                 <!-- <button onclick="window.location.href = 'https://instagram.com/afroflowerr/';" class="btn"><i class="fa fa-instagram" style="font-size:48px;color:white"></i></button>	 -->
-                <button onclick="window.location.href = 'https://linkedin.com/in/anneliesepalmer/';" class="btn"><i class="fa fa-linkedin-square" style="font-size:48px;color:white"></i></button>
-                <!-- <button class="btn"><i class="fa fa-phone" style="font-size:48px;color:white"></i></button>	 -->
+                <button onclick="window.location.href = 'https://linkedin.com/in/anneliesepalmer/';" class="btn"><i class="fa fa-linkedin-square"></i> LinkedIn</button>
+                <button class="btn"><i class="fa fa-envelope"></i> Email</button>	
             </div>
         </div>
     </div>
 
-    <!-- Bootstrap Specfic jQuery and Popper.js -->
+    <!-- Bootstrap and specfic jQuery and Popper.js -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
