--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div role="main container" class="container-fluid">
         <div class="row">
             <div class="col-md-12">
-                <img src="./assets/Images/Mock Code Website_Final Design - Transparent.png" class="img-fluid" alt="Afro Flower Logo">
+                <img src="" class="img-fluid" alt="Afro Flower Logo">
             </div>
         </div>
         <div class="row">
