working on my buttons when the diplay changes

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
+    <!-- BOOTSTRAP -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/style.css">
-    <!-- Add font awesome icon library -->
+    <!-- FONT AWESOME ICON LIBRARY -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"> -->
-
+    <!-- GOOGLE FONTS -->
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+    
     <title>Anneliese Palmer | Web Developer</title>
 
 </head>
@@ -17,15 +18,15 @@
     <div role="main container" class="container-fluid">
         <div class="row">
             <div class="col-md-12">
-                <img src="" class="img-fluid" alt="Afro Flower Logo">
+                <img src="./assets/Images/Code logo - Transparent Logo.png" class="img-fluid" alt="Afro Flower Logo">
+                <h1>Jr. Developer & Visual Artist</h1>
             </div>
         </div>
         <div class="row">
             <div class="col-md-12 text-center p-3">
                 <button onclick="window.location.href = 'https://github.com/AfroFlower';" class="btn"><i class="fa fa-github-alt"></i> GitHub</button>
-                <!-- <button onclick="window.location.href = 'https://instagram.com/afroflowerr/';" class="btn"><i class="fa fa-instagram" style="font-size:48px;color:white"></i></button>	 -->
                 <button onclick="window.location.href = 'https://linkedin.com/in/anneliesepalmer/';" class="btn"><i class="fa fa-linkedin-square"></i> LinkedIn</button>
-                <button class="btn"><i class="fa fa-envelope"></i> Email</button>	
+                <!-- <button class="btn"><i class="fa fa-envelope"></i> Email</button>	 -->
             </div>
         </div>
     </div>
