working on my media queries

--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 <body>
     <div role="main container" class="container-fluid">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-12 text-center">
                 <img src="./assets/Images/Code logo - Transparent Logo.png" class="img-fluid" alt="Afro Flower Logo">
                 <h1>Jr. Developer & Visual Artist</h1>
+                <h3 class="pt-3"><i>Portfolio Coming Soon!</i></h3>
             </div>
         </div>
         <div class="row">
